# applications/services/api/vinyl.go
@@ -30,6 +30,20 @@ type VinylSimple struct {
 	Year   int64  `json:"year,omitempty"`
 }
 
+type HTTPError struct {
+	Code    int    `json:"code,omitempty"`
+	Message string `json:"message,omitempty"`
+}
+
+// Get Vinyl
+// @Schemes
+// @Description Gets a vinyl by id
+// @Tags Vinyl
+// @Accept json
+// @Produce json
+// @Success 200 {object} Vinyl
+// @Failure 404
+// @Router /api/get_vinyl/:id [get]
 func GetVinyl(c *gin.Context) {
 	vinylId := c.Param("id")
 	id, err := strconv.ParseInt(vinylId, 10, 64)
@@ -43,14 +57,23 @@ func GetVinyl(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*10)
 	defer cancel()
 
-	book, err := con.GetVinyl(ctx, &wrapperspb.Int64Value{Value: id})
+	vinyl, err := con.GetVinyl(ctx, &wrapperspb.Int64Value{Value: id})
 	if err != nil {
 		c.Status(http.StatusNotFound)
 	} else {
-		c.IndentedJSON(http.StatusOK, book)
+		c.IndentedJSON(http.StatusOK, vinyl)
 	}
 }
 
+// Get Vinyl By Title
+// @Schemes
+// @Description Gets a vinyl by title
+// @Tags Vinyl
+// @Accept json
+// @Produce json
+// @Success 200 {object} Vinyl
+// @Failure 404
+// @Router /api/get_vinyl_by_title/:title [get]
 func GetVinylByTitle(c *gin.Context) {
 	vinylTitle := c.Param("title")
 
@@ -62,14 +85,23 @@ func GetVinylByTitle(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*10)
 	defer cancel()
 
-	book, err := con.GetVinylByTitle(ctx, &pb.VinylTitle{Title: vinylTitle})
+	vinyl, err := con.GetVinylByTitle(ctx, &pb.VinylTitle{Title: vinylTitle})
 	if err != nil {
 		c.Status(http.StatusNotFound)
 	} else {
-		c.IndentedJSON(http.StatusOK, book)
+		c.IndentedJSON(http.StatusOK, vinyl)
 	}
 }
 
+// Get Vinyls Simplified By Title
+// @Schemes
+// @Description Gets a simplified list of vinyls by title
+// @Tags Vinyl
+// @Accept json
+// @Produce json
+// @Success 200 {object} VinylSimple
+// @Failure 404
+// @Router /api/get_vinyl_simple_by_title/:title [get]
 func GetVinylSimpleByTitle(c *gin.Context) {
 	vinylTitle := c.Param("title")
 
@@ -81,14 +113,23 @@ func GetVinylSimpleByTitle(c *gin.Context) {
 	ctx, cancel := context.WithTimeout(context.Background(), time.Second*10)
 	defer cancel()
 
-	book, err := con.GetVinylSimpleByTitle(ctx, &pb.VinylTitle{Title: vinylTitle})
+	vinyl, err := con.GetVinylSimpleByTitle(ctx, &pb.VinylTitle{Title: vinylTitle})
 	if err != nil {
 		c.Status(http.StatusNotFound)
 	} else {
-		c.IndentedJSON(http.StatusOK, book)
+		c.IndentedJSON(http.StatusOK, vinyl)
 	}
 }
 
+// Get Vinyls By Search
+// @Schemes
+// @Description Gets a list of vinyls from search by title
+// @Tags Vinyl
+// @Accept json
+// @Produce json
+// @Success 200 {object} []Vinyl
+// @Failure 404
+// @Router /api/get_vinyl_by_search/:title [get]
 func GetVinylsBySearch(c *gin.Context) {
 	vinylTitle := c.Param("title")
 
@@ -113,6 +154,15 @@ func GetVinylsBySearch(c *gin.Context) {
 	}
 }
 
+// Get Vinyls
+// @Schemes
+// @Description Gets a list of all vinyls
+// @Tags Vinyl
+// @Accept json
+// @Produce json
+// @Success 200 {object} []Vinyl
+// @Failure 404
+// @Router /api/get_vinyls/ [get]
 func GetAllVinyls(c *gin.Context) {
 	conn, err := grpc.Dial(configuration.Postgres.Service, grpc.WithInsecure())
 	eh.PanicOnError(err, "failed to connect to grpc")
@@ -135,6 +185,15 @@ func GetAllVinyls(c *gin.Context) {
 	}
 }
 
+// Get Vinyls Recommended Artist
+// @Schemes
+// @Description Gets a recommended list of all vinyls from artist by title
+// @Tags Vinyl
+// @Accept json
+// @Produce json
+// @Success 200 {object} []VinylSimple
+// @Failure 404
+// @Router /api/get_vinyl_recs_author/:title [get]
 func GetVinylRecsArtist(c *gin.Context) {
 	vinylTitle := c.Param("title")
 
@@ -159,6 +218,15 @@ func GetVinylRecsArtist(c *gin.Context) {
 	}
 }
 
+// Get Vinyls Recommended Year
+// @Schemes
+// @Description Gets a recommended list of all vinyls from year by title
+// @Tags Vinyl
+// @Accept json
+// @Produce json
+// @Success 200 {object} []VinylSimple
+// @Failure 404
+// @Router /api/get_vinyl_recs_year/:title [get]
 func GetVinylRecsYear(c *gin.Context) {
 	vinylTitle := c.Param("title")
 
